# healthcheck-jupyter

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  setup.cfg
notebooks/: HealthCheck Cookbook.ipynb
notebooks/2023/: Comp NoteBook.ipynb  Drive NoteBook.ipynb  Elbow and Elevator Notebook.ipynb  Full HealthCheck.ipynb  Hand Notebook.ipynb  Health Check.ipynb  Intake Notebook.ipynb
notebooks/2023/data/: practice.json
src/healthcheck/: __init__.py  health_check.py  loaders.py
tests/: conftest.py  health_check_test.py  loaders_test.py  swerve_drive_test.py
tests/_fixtures/: data.json  data.pkl.xz
