[tool.poetry]
name = "healthcheck-jupyter"
version = "0.1.0"
description = ""
authors = ["Jeff Hutchison <jeff@jeffhutchison.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "healthcheck"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

['mypy-tests.*']
disallow_untyped_defs = false
